--- a/Design/style.css
+++ b/Design/style.css
@@ -1,7 +1,7 @@
 .brand-color {
-    color: rgb(47,84,150);
+    color: rgb(47, 84, 150);
 }
 
 .brand-gray {
-    color: rgb(89,89,89);
+    color: rgb(89, 89, 89);
 }
