--- a/Django/resume/templates/resume/experience.html
+++ b/Django/resume/templates/resume/experience.html
@@ -49,7 +49,7 @@
 									<i class="col brand-gray">{{ job.title }}</i>
 								</div>
 								{% if job.short_description %}
-								<p>{{ job.short_description }}</p>
+								<p>{{ job.short_description|linebreaks }}</p>
 								{% endif %}
 								<a href="#" class="btn btn-secondary rounded-0" role="button">View details &raquo;</a>
 							</div>
@@ -89,7 +89,7 @@
 							<div class="{% if project.thumbnail %}col-9{% else %}col{% endif %}">
 								<h2>{{ project.name }}</h2>
 								{% if project.short_description %}
-								<p>{{ project.short_description }}</p>
+								<p>{{ project.short_description|linebreaks }}</p>
 								{% endif %}
 								{% if project.has_source %}
 								<p>
