Add education page

--- a/Django/resume/templates/resume/base.html
+++ b/Django/resume/templates/resume/base.html
@@ -30,7 +30,7 @@
 							<a class="nav-link" href="{% url 'experience' %}">Experience{% block experiencenavlinkcontent %}{% endblock %}</a>
 						</li>
 						<li class="nav-item {% block educationnavitemclass %}{% endblock %}">
-							<a class="nav-link" href="#">Education{% block educationnavlinkcontent %}{% endblock %}</a>
+							<a class="nav-link" href="{% url 'education' %}">Education{% block educationnavlinkcontent %}{% endblock %}</a>
 						</li>
 						<li class="nav-item {% block contactnavitemclass %}{% endblock %}" title="Not yet available">
 							<a class="nav-link disabled" href="#">Contact{% block contactnavlinkcontent %}{% endblock %}</a>
