--- a/Django/resume/templates/resume/index.html
+++ b/Django/resume/templates/resume/index.html
@@ -37,14 +37,14 @@
 		<p>
 			{{ overview.experience }}
 		</p>
-		<p><a class="btn btn-secondary rounded-0" href="#" role="button">View details &raquo;</a></p>
+		<p><a class="btn btn-secondary rounded-0" href="{% url 'experience' %}" role="button">View details &raquo;</a></p>
 	</div>
 	<div class="col-md-6">
 		<h2>Education</h2>
 		<p>
 			{{ overview.education }}
 		</p>
-		<p><a class="btn btn-secondary rounded-0" href="#" role="button">View details &raquo;</a></p>
+		<p><a class="btn btn-secondary rounded-0" href="{% url 'education' %}" role="button">View details &raquo;</a></p>
 	</div>
 </div>
 {% endif %}
