--- a/Django/resume/templates/resume/job_detail.html
+++ b/Django/resume/templates/resume/job_detail.html
@@ -26,7 +26,7 @@
 {% if job.complete_description %}
 <div class="row">
 	<div class="col">
-		<p>{{ job.complete_description }}</p>
+		<p>{{ job.complete_description | linebreaks }}</p>
 	</div>
 </div>
 {% endif %}
