--- a/Django/resume/static/resume/css/style.css
+++ b/Django/resume/static/resume/css/style.css
@@ -13,3 +13,35 @@
 .w-60 {
 	width: 60%;
 }
+
+.carousel-control-next {
+	background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(0,0,0,0.1) 100%);
+	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(0,0,0,0.1) 100%);
+	background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(0,0,0,0.1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#1a000000',GradientType=1 );
+}
+
+.carousel-control-next:hover {
+	background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(0,0,0,0.25) 100%);
+	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(0,0,0,0.25) 100%);
+	background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(0,0,0,0.25) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#40000000',GradientType=1 );
+}
+
+.carousel-control-prev {
+	background: -moz-linear-gradient(left, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0) 100%);
+	background: -webkit-linear-gradient(left, rgba(0,0,0,0.1) 0%,rgba(255,255,255,0) 100%);
+	background: linear-gradient(to right, rgba(0,0,0,0.1) 0%,rgba(255,255,255,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a000000', endColorstr='#00ffffff',GradientType=1 );
+}
+
+.carousel-control-prev:hover {
+	background: -moz-linear-gradient(left, rgba(0,0,0,0.25) 0%, rgba(255,255,255,0) 100%);
+	background: -webkit-linear-gradient(left, rgba(0,0,0,0.25) 0%,rgba(255,255,255,0) 100%);
+	background: linear-gradient(to right, rgba(0,0,0,0.25) 0%,rgba(255,255,255,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#40000000', endColorstr='#00ffffff',GradientType=1 );
+}
+
+.carousel-indicators li {
+	border: 1px rgba(0,0,0,0.5) outset;
+}
