--- a/Django/resume/templates/resume/base.html
+++ b/Django/resume/templates/resume/base.html
@@ -12,6 +12,9 @@
 
 		<!-- Custom css -->
 		<link rel="stylesheet" type="text/css" href="{% static "resume/css/style.css" %}">
+
+		<!-- Favicon -->
+		<link rel="shortcut icon" type="image/png" href="{% static "resume/icons/favicon.png" %}">
 	</head>
 	<body>
 		<!-- Main container -->
